# from-statistics-to-ml

./: README.md  pyproject.toml
Problem 1/data/raw/: model1_test.csv  model2_test.csv
Problem 1/notebooks/: HW_1.ipynb  solution.ipynb
