[tool.poetry]
name = "from-statistics-to-ml"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Borodynya Maxim <borody.maxim@gmail.com>"]
readme = "README.md"
repository = "https://github.com/JaskierM/from-statistics-to-ml"
keywords = ["statistics", "analysis"]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jupyter = "^1.0.0"
zfit = "^0.16.0"
seaborn = "^0.13.0"
scipy = "^1.11.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
